2008-10-22  Christian Persch  <chpe@gnome.org>

	* gconf/gconftool-2.c: Add --search-key-regex; bug #557489.

2008-10-22  Christian Persch  <chpe@gnome.org>

	* defaults/gconf-defaults.c: (do_copy),
	(gconf_defaults_unset_mandatory): Fix some 'format not a string
	literal and no format arguments' warnings.

2008-10-22  Christian Persch  <chpe@gnome.org>

	* gconf/gconf-backend.c: (gconf_backend_unref): Fix one 'format not a
	string literal and no format arguments' warning.

2008-09-25  Tor Lillqvist  <tml@novell.com>

	* gconf/dllmain.c (setup): Drop the Win9x code path. There is no
	Win9x support any more lower in the stack anyway.

=========================== 2.24.0 ===========================

2008-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Updated 
	* configure.in: Release 2.24.0.

2008-08-21  Saleem Abdulrasool  <compnerd@compnerd.org>

	reviewed by: kmaraas

	* configure.in:  Check for polkit-policy-file-validate if
	policykit is neede to allow configure to pass on systems 
	without PolicyKit

=========================== 2.23.2 ==========================

2008-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* defaults/Makefile.am: Add distclean rule.
	* gconf/gconfd.c: (get_on_system_bus):
	* gconf/gconfd.h: Fix some warnings.

2008-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Check for polkit-policy-file-validate
	to fix make distcheck.

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Add noteworthy new features

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 531169 – A mechanism for setting defaults

	The cache-clearing part of this patch is thanks
	to Behdad Esfahbod.

	* defaults/*: A DBus system bus service that can copy a 
	subtree of GConf values from the callers db to a system-wide
	db, using PolicyKit to control access.

	* configure.in: Add --enable-defaults-service to optionally
	build the defaults service.

	* gconf/gconf-database.[hc]: Add
	gconf_database_clear_cache_for_sources.
