@@ -1,3 +1,9 @@
+2008-12-02  Ray Strode  <rstrode@redhat.com>
+
+	* gconf/gconfd.c: (logfile_save):
+	sync saved state file to disk before closing
+	(bug 562976)
+
 2008-10-22  Christian Persch  <chpe@gnome.org>
 
 	* gconf/gconftool-2.c: Add --search-key-regex; bug #557489.
